# fps-geometry-engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
docs/: MVP_SPEC.md
examples/: example_open.cpp  example_wall.cpp
include/analysis/: AnalysisResult.hpp  ExposureAnalyzer.hpp  ReachabilityAnalyzer.hpp  SceneAnalyzer.hpp  VisibilityAnalyzer.hpp
include/core/: Agent.hpp  Map.hpp  Scene.hpp
include/geom/: AABB.hpp  Raycast.hpp  Vec2.hpp
src/analysis/: ExposureAnalyzer.cpp  ReachabilityAnalyzer.cpp  SceneAnalyzer.cpp  VisibilityAnalyzer.cpp
src/core/: Map.cpp
tests/: test_exposure.cpp  test_reachability.cpp  test_scene_analyzer.cpp  test_visibility.cpp
viewer/: main.cpp
